WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111782
REGRESSION (
r143643
): <button> should support ::first-line and ::first-letter
https://bugs.webkit.org/show_bug.cgi?id=111782
Summary
REGRESSION (r143643): <button> should support ::first-line and ::first-letter
Christian Biesinger
Reported
2013-03-07 15:31:21 PST
<button> should support ::first-line and ::first-letter
Attachments
Patch
(4.91 KB, patch)
2013-03-07 15:34 PST
,
Christian Biesinger
no flags
Details
Formatted Diff
Diff
Patch
(5.62 KB, patch)
2013-03-08 09:08 PST
,
Christian Biesinger
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Christian Biesinger
Comment 1
2013-03-07 15:34:10 PST
Created
attachment 192096
[details]
Patch
Ojan Vafai
Comment 2
2013-03-07 17:00:48 PST
Comment on
attachment 192096
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192096&action=review
> Source/WebCore/rendering/RenderBlock.cpp:6496 > + if (firstLineBlock->isReplaced() || firstLineBlock->isFloating()
How about a FIXME to remove the isRenderButton check once we support align-items on RenderBlock and migrate RenderButton off of RenderFlexibleBox?
> Source/WebCore/rendering/RenderBlock.cpp:6550 > + !parentBlock->isBlockFlow() || (parentBlock->isFlexibleBox() && !parentBlock->isRenderButton()))
ditto
Elliott Sprehn
Comment 3
2013-03-07 19:33:29 PST
Comment on
attachment 192096
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192096&action=review
> Source/WebCore/rendering/RenderBlock.cpp:6498 > + || (parentBlock->isFlexibleBox() && !parentBlock->isRenderButton()))
Can we add a comment about why this is needed? Flex box doesn't support :first-line and :first-letter by design (in the spec), but we're adding a hack here since <buttons> are magical.
Christian Biesinger
Comment 4
2013-03-08 09:08:59 PST
Created
attachment 192237
[details]
Patch
WebKit Review Bot
Comment 5
2013-03-08 10:30:00 PST
Comment on
attachment 192237
[details]
Patch Rejecting
attachment 192237
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 192237, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: rce/WebKit/chromium/webkit/media/crypto/ppapi/cdm --revision 181763 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 56>At revision 181763. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://webkit-commit-queue.appspot.com/results/17025416
Christian Biesinger
Comment 6
2013-03-08 13:05:18 PST
Comment on
attachment 192237
[details]
Patch ChangeLog merge conflict? I guess just try again? I though the bots handled that.
WebKit Review Bot
Comment 7
2013-03-08 13:47:35 PST
Comment on
attachment 192237
[details]
Patch Clearing flags on attachment: 192237 Committed
r145265
: <
http://trac.webkit.org/changeset/145265
>
WebKit Review Bot
Comment 8
2013-03-08 13:47:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug