REGRESSION (r143643): <button> should support ::first-line and ::first-letter https://bugs.webkit.org/show_bug.cgi?id=111782

Patch by Christian Biesinger <cbiesinger@chromium.org> on 2013-03-08
Reviewed by Ojan Vafai.

Source/WebCore:

Test: fast/forms/button-first-line-first-letter.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::firstLineBlock):
(WebCore::findFirstLetterBlock):
Add isRenderButton to the first-line and first-letter checks that
don't allow ::first-* styles for flexbox.

LayoutTests:

* fast/forms/button-first-line-first-letter-expected.html: Added.
* fast/forms/button-first-line-first-letter.html: Added.

Canonical link: https://commits.webkit.org/130245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145265 268f45cc-cd09-0410-ab3c-d52691b4dbfc